# uav_frontier_based_collector

./: README.md
gazebo_worlds/: CMakeLists.txt  README.md  package.xml
gazebo_worlds/launch/: simulation_horus.launch
gazebo_worlds/models/aws_robomaker_residential_RoomWall_01/: model.sdf
gazebo_worlds/models/floor/: model.config  model.sdf
gazebo_worlds/models/floor/meshes/: floor.dae
gazebo_worlds/models/inespasa_large/: model.config  model.sdf
gazebo_worlds/models/inespasa_wall/: model.config  model.sdf
gazebo_worlds/models/simple_wall/: model.sdf
gazebo_worlds/models/testbed/: model.config  model.sdf
gazebo_worlds/models/wall_12x8/: model.config  model.sdf
gazebo_worlds/models/wall_short_5x8/: model.config  model.sdf
gazebo_worlds/models/wall_short_9x8/: model.config  model.sdf
gazebo_worlds/models/walll_12x8/: model.config  model.sdf
gazebo_worlds/worlds/: empty.world  testbed_large.world  testbed_large_empty.world  testbed_large_lv1.world  testbed_large_lv2.world  testbed_large_lv3.world  testbed_large_lv4.world
horus_exploration/: CMakeLists.txt  package.xml
horus_exploration/scripts/: basic_trajectory.py  exploration_sm.py  medium_trajectory.py  metrics.py
horus_exploration/src/: generate_traj.cpp
octomanager/: CMakeLists.txt  README.md  package.xml
octomanager/config/: params.yaml
octomanager/include/octomanager/: BestFrontier.h  octomanager.h  params.h
octomanager/launch/: octomanager.launch
octomanager/rviz/: config.rviz
octomanager/src/: BestFrontier.cpp  main.cpp  octomanager.cpp  params.cpp
octomanager/srv/: CheckObstacles.srv
